GUI modifications to prepare for new scripts menu. Watermark Textboxes replacing old ones (needs tweaking..)

--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -107,6 +107,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="WADPacker.cs" />
+    <Compile Include="WaterMarkTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Windows7ProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
