--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -124,10 +124,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="direction_down.ico" />
+    <None Include="Resources\package_green.png" />
+    <None Include="Resources\package.png" />
+    <None Include="Resources\picture_empty.png" />
+    <None Include="Resources\telephone_add.png" />
     <None Include="Resources\script_code_red.png" />
     <None Include="Resources\script_code.png" />
     <None Include="Resources\database_save.png" />
     <None Include="Resources\folder_table.png" />
+    <None Include="Resources\help1.png" />
+    <None Include="Resources\information.png" />
+    <None Include="Resources\box.png" />
+    <None Include="Resources\disk.png" />
     <Content Include="Resources\key.png" />
     <None Include="Resources\page_white_magnify.png" />
     <None Include="Resources\server_link.png" />
