Removed "ignore ticket" as it really had no purpose...

--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -136,6 +136,7 @@
     <None Include="Resources\information.png" />
     <None Include="Resources\box.png" />
     <None Include="Resources\disk.png" />
+    <None Include="Resources\drive_disk.png" />
     <Content Include="Resources\key.png" />
     <None Include="Resources\page_white_magnify.png" />
     <None Include="Resources\server_link.png" />
