Made new SetTextThreadSafe function Script mode (file version) will now load correctly, even subdirectories Script mode now: - auto-enables WAD packing - changes output directory to new directory (output_<name of script>) - auto-deletes leftovers

--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -114,6 +114,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Windows7Taskbar.cs" />
+    <None Include="TODO" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\wilolgoi.png" />
