--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -68,7 +68,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CertificateChain.cs" />
+    <Compile Include="CommonKey.cs" />
     <Compile Include="COMTypes.cs" />
+    <Compile Include="ContentIndices.cs" />
     <Compile Include="Form1.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Form</SubType>
@@ -77,6 +80,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="Headers.cs" />
+    <Compile Include="IosPatcher.cs" />
+    <Compile Include="Lz77.cs" />
     <Compile Include="NusClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,6 +114,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Shared.cs" />
+    <Compile Include="Ticket.cs" />
+    <Compile Include="TMD.cs" />
+    <Compile Include="U8.cs" />
+    <Compile Include="WAD.cs" />
     <Compile Include="WADPacker.cs" />
     <Compile Include="WaterMarkTextBox.cs">
       <SubType>Component</SubType>
