Database.cs created, not implemented yet.

--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CommonKey.cs" />
     <Compile Include="COMTypes.cs" />
     <Compile Include="ContentIndices.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Form1.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Form</SubType>
