--- a/NUS Downloader/NUS Downloader.csproj
+++ b/NUS Downloader/NUS Downloader.csproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Crystal_Clear_app_ark2.ico" />
+    <None Include="Resources\money.png" />
     <None Include="Resources\wrench.png" />
     <None Include="Resources\script_start.png" />
     <None Include="Resources\package_green.png" />
